--- a/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageRiwayatPangkat.zul
+++ b/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageRiwayatPangkat.zul
@@ -46,7 +46,7 @@
                                 <rows>
                                     <row>
                                         <hbox>
-                                            <label id="labelCkdPangkat" value="Code Pangkat"/>
+                                            <label id="labelCkdPangkat" value="Kode Pangkat"/>
                                             <label value="*" style="color:red;font-size:10px"/>
                                         </hbox>
                                         <hbox>
