--- a/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKaryaDtl.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKaryaDtl.zul
@@ -61,6 +61,7 @@
                                     <row>
                                         <hbox>
                                             <label id="labelcmediaterbit" value="Nama Media Penerbitan"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
                                         </hbox>
                                         <textbox id="txtbcmediaterbit" value="@{controller.mkaryamhs.cmediaterbit}" constraint="no empty" maxlength="50" width="150px" readonly="true"/>
                                     </row>
