--- a/trunk/siak/web/WEB-INF/pages/irs/paket/paketDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/irs/paket/paketDetail.zul
@@ -108,7 +108,7 @@
                                         <separator bar="true"></separator>
                                         <separator bar="true"></separator>
                                     </row>
-                                    <row>
+                                    <!--row>
                                         <hbox>
                                             <label value="Matakuliah"/>
                                             <label value="*" style="color:red;font-size:10px"/>
@@ -124,7 +124,7 @@
                                                     image="/images/icons/btn_search2_16x16.gif"
                                                     tooltiptext="Cari Matakuliah"/>
                                         </hbox>
-                                    </row>
+                                    </row-->
                                 </rows>
                             </grid>
                         </groupbox>
